--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -184,8 +184,6 @@ h2, h3 {
 #profile {
   
   .avatar-square {
-  -webkit-clip-path: polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%);
-  clip-path: polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%);
   opacity: 0;
   position: relative;
   right: -300px;
@@ -263,6 +261,44 @@ h2, h3 {
         100% { opacity: 1; }
     } 
   }
+}
+
+#profile1 {
+  
+  .avatar-square {
+  opacity: 0;
+  position: relative;
+  right: -300px;
+  -webkit-animation: slide-left 2s cubic-bezier(0.87, 0, 0.13, 1) forwards;
+  animation: slide-left 2s forwards cubic-bezier(0.87, 0, 0.13, 1) forwards;
+  }
+
+  .portrait-title {
+    opacity: 0;
+    position: relative;
+    left: -1000px;
+    -webkit-animation: slide-right 2s cubic-bezier(0.87, 0, 0.13, 1) forwards;
+    animation: slide-right 2s cubic-bezier(0.87, 0, 0.13, 1) forwards;
+    
+  }
+  
+  @-webkit-keyframes slide-right {
+      100% { left: 0; opacity: 1}
+  }
+  
+  @keyframes slide-right {
+      100% { left: 0; opacity: 1; }
+  }
+  
+  @-webkit-keyframes slide-left {
+      100% { right: 0; opacity: 1; }
+  }
+  
+  @keyframes slide-left {
+      100% { right: 0; opacity: 1; }
+  }
+  
+  
 }
 
 /* buttons */
