--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -18,23 +18,33 @@
 {{ $avatar_shape := site.Params.features.avatar.shape | default "circle" }}
 
 <!-- About widget -->
-<div>
+<!-- <div>
   <a class="background-img" href="#img1"><img id="img1" src="img/footer.png" /></a>
-</div>
+</div> -->
+<div class = "row">
+  <div class="col-24 col-lg-8" >
 
+    <div id="profile1">
+      
+
+      {{ if site.Params.features.avatar.gravatar }}
+      <img class="{{if eq $avatar_shape "square"}}avatar-square{{else}}avatar-circle{{end}}" src="https://s.gravatar.com/avatar/{{ md5 $person.email }}?s=270')" alt="{{$person_page.Title}}">
+      {{ else if $avatar }}
+      {{ $avatar_image := $avatar.Fill "897x251" }}
+      <img width="{{ $avatar_image.Width }}" height="{{ $avatar_image.Height }}"
+           src="{{ $avatar_image.RelPermalink }}" alt="{{$person_page.Title}}">
+      {{ end }}
+
+      
+    </div>
+  </div>
+  </div> 
 <div class="row">
   <div class="col-12 col-lg-4">
     <div id="profile">
       
 
-      {{ if site.Params.features.avatar.gravatar }}
-      <img class="avatar {{if eq $avatar_shape "square"}}avatar-square{{else}}avatar-circle{{end}}" src="https://s.gravatar.com/avatar/{{ md5 $person.email }}?s=270')" alt="{{$person_page.Title}}">
-      {{ else if $avatar }}
-      {{ $avatar_image := $avatar.Fill "270x270 Center" }}
-      <img class="avatar {{if eq $avatar_shape "square"}}avatar-square{{else}}avatar-circle{{end}}"
-           width="{{ $avatar_image.Width }}" height="{{ $avatar_image.Height }}"
-           src="{{ $avatar_image.RelPermalink }}" alt="{{$person_page.Title}}">
-      {{ end }}
+     
 
       <div class="portrait-title">
 
@@ -45,7 +55,7 @@
               <rt>{{ $person.name_pronunciation }}</rt>
             </ruby>
           {{- else -}}
-            Nick Ballou
+            Lens Lab
           {{- end -}}
         </h2>
 
@@ -96,9 +106,7 @@
 
 
    <div class="article-style">
-      <div class="main-content">{{ $person_page.Content }}</div>
-      <a class="btn btn-outline-primary btn-page-header btn-download" href="files/cv.pdf" target="_blank" rel="noopener">CV</a>
-    </div>
+      <div class="main-content">{{ $person_page.Content }}
 
   </div>
 
