--- a/themes/github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy/v5/assets/scss/wowchemy/widgets/_about.scss
+++ b/themes/github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy/v5/assets/scss/wowchemy/widgets/_about.scss
@@ -4,7 +4,7 @@
 
 .wg-about {
   @media screen and (min-width: 768px) {
-    height: 100vh;
+    height: 1000px;
     display: flex;
     align-items: center; 
     justify-content: center;
@@ -24,7 +24,7 @@
 
 .wg-about .container {
   @media screen and (min-width: 1200px) {
-    margin-bottom: 200px;
+    margin-bottom: 90px;
   }
 }
 
